<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/nav_menu_list_of_examples" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_menu_world_map" />
    </group>

    <item android:title="@string/menu_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_author"
                android:icon="@drawable/ic_menu_about_the_author"
                android:title="@string/nav_menu_about_the_author" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/nav_menu_send_feedback" />
        </menu>
    </item>

</menu>