<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.geeksploit.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextQuote"
            android:text="@string/quote_bugs" />

        <TextView
            style="@style/TextCode"
            android:text="@string/code_hello_world" />

        <Button
            style="@style/ButtonWide"
            android:text="@string/button_wide" />

        <Button
            style="@style/ButtonShort"
            android:text="@string/button_short" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>